# carousel

./: CMakeLists.txt  README.md  carousel.cfg  carousel.sh
cmake/: FindLibConfig.cmake
scripts/: README.txt  kill_switch.conf  kill_switch.py
src/: audio.cpp  audio.h  carousel.cpp  carousel.h  main.cpp  res_path.cpp  res_path.h
